--- a/node-vue-cli/Dockerfile
+++ b/node-vue-cli/Dockerfile
@@ -7,3 +7,4 @@ RUN npm install -S vue-carousel
 RUN npm install -S vue-resource
 RUN npm install -S vue-router
 RUN npm install -S vue-awesome
+RUN npm install -S vue-infinite-loading
