--- a/node-vue-cli/Dockerfile
+++ b/node-vue-cli/Dockerfile
@@ -9,3 +9,4 @@ RUN npm install -S vue-router
 RUN npm install -S vue-awesome
 RUN npm install -S vue-infinite-loading
 RUN npm install -S vue-slider-component
+RUN npm install -S vuetrend
