--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -34,7 +34,7 @@ Pygments==2.1.3
 PySocks==1.6.6
 python-editor==1.0.1
 pytz==2016.10
-requests==2.11.1
+requests
 requests-toolbelt==0.7.0
 six==1.10.0
 SQLAlchemy==1.2.0b3
